# orchestrAI

./: .gitignore  Makefile  README.md  install.sh  package.json  plan.yaml  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
deploy/: docker-compose.e2e.yml  docker-compose.yml
docs/: README.md  design-produces-commit.md  quickstart.md  repro-navbar-false-completion.md  repro-plan-done-drift.md  repro-stale-merge-button.md  user-guide.md
docs/adrs/: 0002-worktree-per-agent-isolation.md  0003-unattended-auto-mode.md  0004-unify-check-prompts.md
docs/architecture/: overview.md  persistence.md  protocols.md  session-daemon.md
docs/reference/: drivers.md  plan-schema.md
screenshots/: record-demo.mjs
server/: package.json
server-rs/: Cargo.toml
server-rs/src/: audit.rs  auto_mode.rs  auto_status.rs  config.rs  db.rs  file_watcher.rs  git_helpers.rs  hooks.rs  main.rs  mcp.rs  persisted_settings.rs  plan_curate.rs  plan_parser.rs  state.rs  ws.rs
server-rs/src/agents/: check_agent.rs  driver.rs  mod.rs  pty_agent.rs  session_protocol.rs  session_settings.rs  spawn_ops.rs  supervisor.rs  terminal_ws.rs
server-rs/src/api/: agents.rs  ci.rs  plans.rs  settings.rs
server-rs/src/auth/: mod.rs  sso.rs
server-rs/src/mcp/: mod.rs  transport.rs
server-rs/src/mcp/tools/: status.rs
server-rs/src/saas/: dispatch.rs  mod.rs  outbox.rs  runner_protocol.rs  runner_rpc.rs  runner_ws.rs
server-rs/tests/: folders.rs  merge_guard.rs  plan_config.rs  plan_delete.rs  plan_purge.rs  plans_done_count.rs  recovery.rs  snapshot_panel.rs  unattended_auto_mode_e2e.rs
server-rs/tests/support/: mod.rs
server/src/: agent-manager.ts  api.ts  config.ts  db.ts  plan-parser.ts  ws.ts
tests/e2e/: run.sh
web/: package.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/: AdminPage.test.tsx  AdminPage.tsx  AgentPanel.tsx  AgentTree.tsx  ArchivePanel.test.tsx  ArchivePanel.tsx  AuditLog.test.tsx  AuditLog.tsx  AutoModeStatusPill.test.tsx  BulkDeleteModal.test.tsx  BulkDeleteModal.tsx  DeletePlanModal.test.tsx  DeletePlanModal.tsx  EditableText.tsx  ErrorBoundary.tsx  LoginPage.tsx  NewPlanForm.test.tsx  NewPlanForm.tsx  PhaseCard.tsx  PhaseColumn.tsx  PlanBoard.tsx  ProjectDashboard.test.tsx  ProjectDashboard.tsx  Sidebar.tsx  TaskCard.test.ts  TaskCard.test.tsx  TaskCard.tsx  UncommittedWorkBanner.test.tsx
web/src/stores/: agent-store.ts  auth-store.ts  plan-store.test.ts  plan-store.ts  settings-store.ts  ws-store.test.ts  ws-store.ts
