[package]
name = "orchestrai-server"
version = "0.3.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
regex = "1"
notify = { version = "8", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.6"
rusqlite = { version = "0.35", features = ["bundled"] }
serde_yaml = "0.9"
portable-pty = "0.9"
libc = "0.2"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
interprocess = { version = "2", features = ["tokio"] }
postcard = { version = "1", features = ["alloc"] }
rmcp = { version = "1.4", default-features = false, features = ["server", "macros", "transport-streamable-http-server", "transport-io"] }
schemars = "1"
bcrypt = "0.19"
rand = "0.9"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

[[bin]]
name = "orchestrai-runner"
path = "src/bin/orchestrai_runner.rs"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
