[package]
name = "branchwork-server"
version = "0.3.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
regex = "1"
notify = { version = "8", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.6"
rusqlite = { version = "0.35", features = ["bundled"] }
serde_yaml = "0.9"
portable-pty = "0.9"
libc = "0.2"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
interprocess = { version = "2", features = ["tokio"] }
postcard = { version = "1", features = ["alloc"] }
rmcp = { version = "1.4", default-features = false, features = ["server", "macros", "transport-streamable-http-server", "transport-io"] }
schemars = "1"
bcrypt = "0.19"
rand = "0.9"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
lettre = { version = "0.11", default-features = false, features = ["builder", "tokio1-rustls-tls", "smtp-transport"] }
jsonwebtoken = "9"
base64 = "0.22"
quick-xml = "0.37"
flate2 = "1"
sha2 = "0.10"

[[bin]]
name = "branchwork-runner"
path = "src/bin/branchwork_runner.rs"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
